--- a/public/src/sass/base.sass
+++ b/public/src/sass/base.sass
@@ -84,6 +84,8 @@ a
 .success-form-animate
   border: 1px solid rgba(69, 255, 69, 0.84)
   box-shadow: 0 0 7px 2px rgba(150,218,150,.55)
+.v-top
+  vertical-align: top
 
 /**************************/
 /********* 组件类 **********/
@@ -91,7 +93,7 @@ a
 .line-router
   font-size: 14px
   font-weight: bold
-  padding-bottom: 9px
+  padding: 5px 0
   .node
     display: inline-block
     cursor: pointer
