fix some issues and complete the sms api...

--- a/views/print.hbs
+++ b/views/print.hbs
@@ -284,7 +284,7 @@
 <br/><br/><br/>
 {{/list}}
 {{/if}}
-<object style="position: absolute; left: -9000px; top: -9000px;" type="application/x-bang5taoplugin" id="b5tplugin" height="0" width="0"></object>
+<!--<object style="position: absolute; left: -9000px; top: -9000px;" type="application/x-bang5taoplugin" id="b5tplugin" height="0" width="0"></object>-->
 </body>
 </html>
 <!--
