订单来源，支付方式，支付状态联动，功能性重构

--- a/public/src/sass/base.sass
+++ b/public/src/sass/base.sass
@@ -87,10 +87,13 @@ a
 .font-lg
   font-size: 15px !important
 .transition
-  transition: all .8s ease-in-out
+  transition: all .8s ease-in
 .success-form-animate
   border: 1px solid rgba(69, 255, 69, 0.84)
   box-shadow: 0 0 7px 2px rgba(150,218,150,.55)
+.fail-form-animate
+  border: 1px solid rgba(236, 144, 144, 0.86)
+  box-shadow: 0 0 5px 0px rgba(230, 57, 57, 0.58)
 .v-top
   vertical-align: top
 
@@ -223,9 +226,9 @@ hr.dotted
   width: 30px !important
   padding-left: 2px
   padding-right: 2px
-.order-status
-  @extend .round
-  width: 80px
+// .order-status
+//   @extend .round
+//   width: 80px
 
 @keyframes rotate
   0% {transform: rotateX(0deg)}
