--- a/public/src/sass/_bootstrap_reset.scss
+++ b/public/src/sass/_bootstrap_reset.scss
@@ -311,3 +311,6 @@ h4, .h4 {
 .text-success {
   color: #45C747;
 }
+.alert-danger, .alert-info, .alert-success, .alert-warning{
+  border: 1px solid transparent;
+}
