--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,8 +18,8 @@
 <body>
     <section id="app"></section>
     <script src="/lib/vendor/jquery-1.11.3.min.js"></script>
-    <script src="/js/app.min.js?rev=54cbb46f828dede844d00eeb4af20aeb"></script>
-    
+    <script src="http://localhost:3000/app.js"></script>
+    <script src="http://localhost:3000/webpack-dev-server.js"></script>
     <!-- <script src="/js/main.min.js?rev=74a2b33f68a000e4799f522640dc3654"></script>              -->
     <script src="/lib/bootstrap.min.js"></script>
     <script src="/lib/bootstrap-datepicker.min.js"></script>
