--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,15 +11,15 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/datepicker.min.css">
     <link href="/plugins/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.min.css?rev=30dbdca14041cd29e8d0dca43c2cb043">
+    <link rel="stylesheet" href="/css/style.min.css?rev=a0f8a585db1173c093269f8cef90689d">
     <script type="text/javascript">xfxb = { login: {{isLogin}}, root: "/", };</script>
 </head>
 
 <body>
     <section id="app"></section>
     <script src="/lib/vendor/jquery-1.11.3.min.js"></script>
-    <script src="/js/app.min.js?rev=54cbb46f828dede844d00eeb4af20aeb"></script>
-    
+    <script src="http://localhost:3000/app.js"></script>
+    <script src="http://localhost:3000/webpack-dev-server.js"></script>
     <!-- <script src="/js/main.min.js?rev=74a2b33f68a000e4799f522640dc3654"></script>              -->
     <script src="/lib/bootstrap.min.js"></script>
     <script src="/lib/bootstrap-datepicker.min.js"></script>
