--- a/public/src/sass/style.sass
+++ b/public/src/sass/style.sass
@@ -5,6 +5,9 @@
 @import "extend"
 
 @import "base"
+@import "datepicker.scss"
+@import "loader.scss"
+
 @import "nav"
 @import "login.scss"
 @import "header.scss"
