--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,27 +2,35 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>幸福西饼</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/css/datepicker.min.css">
-    <link href="/plugins/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.min.css?rev=af6968560ae1f0794f1089aa6d027d99">
-    <script type="text/javascript">xfxb = { login: {{isLogin}}, root: "/", };</script>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>幸福西饼</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link href="/plugins/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/style.min.css?rev=071c0a7463419029cf91d221941a0a8b">
+  <script type="text/javascript">xfxb = { login: {{isLogin}}, root: "/", };</script>
 </head>
 
 <body>
-    <section id="app"></section>
-    <script src="/lib/vendor/jquery-1.11.3.min.js"></script>
-    <script src="/js/app.min.js?rev=68f1eed7f63900a362ce1ec598d4e048"></script>
-    
-    <!-- <script src="/js/main.min.js?rev=74a2b33f68a000e4799f522640dc3654"></script>              -->
-    <script src="/lib/bootstrap.min.js"></script>
-    <script src="/lib/bootstrap-datepicker.min.js"></script>
+  <!-- 加载进度条 -->
+  <div id="loader" class="loader">
+    <div class="loader-inner">
+      <svg class="circular" viewBox="25 25 50 50">
+        <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"></circle>
+      </svg>
+    </div>
+  </div>
+  <section id="app"></section>
+  <script src="/lib/vendor/jquery-1.11.3.min.js"></script>
+  <script src="/js/app.min.js?rev=d4d18c0dfc4cba2915902ae982885879"></script>
+  <script type="text/javascript">$(function(){$('#loader').remove();})</script>
+  
+  <!-- <script src="/js/main.min.js?rev=74a2b33f68a000e4799f522640dc3654"></script> -->
+  <script src="/lib/bootstrap.min.js"></script>
+  <script src="/lib/bootstrap-datepicker.min.js"></script>
 </body>
 
 </html>
