--- a/public/src/sass/content.scss
+++ b/public/src/sass/content.scss
@@ -1,10 +1,20 @@
 .sticky-header{
   .right-side {
-    overflow: auto;
-    padding-top: 50px;
-    // font-size: 12px;
+    position: relative;
+    height: 100%;
+    .main-content {
+      padding-top: 61px;
+      height: 100%;
+    }
   }
 }
 .login-show, .login-show .right-side {
     overflow: hidden !important;
+}
+
+@media screen and ( max-height: 880px ) {
+  .table-responsive.main-list{ max-height: 419px; }
+}
+@media screen and ( max-height: 780px ) {
+  .table-responsive.main-list{ max-height: 329px; }
 }
