bug fix --- test 4

--- a/public/src/sass/base.sass
+++ b/public/src/sass/base.sass
@@ -7,7 +7,7 @@ body
   // font-family: 'sans-serif'
   font-family: "open sans","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 13px;
-  color: #676a6c;
+  color: #292A2B;
   overflow: hidden
   // perspective: 1000
   &.login_hide
@@ -98,6 +98,10 @@ a
   box-shadow: 0 0 5px 0px rgba(230, 57, 57, 0.58)
 .v-top
   vertical-align: top
+.bold
+  font-weight: bold
+.theme
+  color: $theme-font-color
 
 /**************************/
 /********* 组件类 **********/
