--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,8 +10,10 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link href="/plugins/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/css/style.min.css?rev=c0e387bf2a9219242b789e1f55401c31">
-  <script type="text/javascript">xfxb = { login: {{isLogin}}, root: "/"{{#if user}}, user : '{{{user}}}' {{/if}} };</script>
+  <link rel="stylesheet" href="/css/style.min.css?rev=396b1e48e75fa72f21b2acef1d4a6c7f">
+  <script type="text/javascript">
+    window.xfxb = { login: {{isLogin}}, root: "/"{{#if user}}, user : JSON.parse('{{{user}}}') || {} {{/if}} };
+  </script>
 </head>
 
 <body>
@@ -25,7 +27,7 @@
   </div>
   <section id="app"></section>
   <script src="/lib/vendor/jquery-1.11.3.min.js"></script>
-  <script src="/js/app.min.js?rev=8496ffeefd9742b9bf08cde23e4e5730"></script>
+  <script src="/js/app.min.js?rev=24bbbfc7820a19d7a0784dc2ed7997e7"></script>
   <script type="text/javascript">$(function(){$('#loader').remove();})</script>
   
   <!-- <script src="/js/main.min.js?rev=74a2b33f68a000e4799f522640dc3654"></script> -->
