--- a/public/src/sass/_variables.sass
+++ b/public/src/sass/_variables.sass
@@ -4,9 +4,10 @@ $theme-bg-color: lighten($theme-color, 12)
 $theme-light-color: #F5E6CE
 $theme-dark-color: #E2CAA5
 
-$theme-font-color: #D8A85F
+// $theme-font-color: #D8A85F
+$theme-font-color: #9C6B21
 
-$nav-active-font-color: #9C6B6B
+$nav-active-font-color: #8C623E
 
 $left-side-w: 200px
 $nav-sub-item-height: 20px
@@ -16,4 +17,6 @@ $sub-menu-min-w: 140px
 $theme-black: #4A4947
 
 $pagination-color: #D0C59E
-$btn-color: #D2C398
+$btn-color: #BD9E64
+
+$login-color: #A26B4B
