--- a/public/src/sass/login.scss
+++ b/public/src/sass/login.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   z-index: 10000;
-  background: #5FA3BA url("/images/login-bg.jpg") no-repeat fixed;
+  background: url("/images/login-bg.jpg") no-repeat fixed;
   // background: #38B18C;
   // background: $theme-bg-color;
   background-size: cover;
@@ -23,16 +23,22 @@
 }
 
 .form-signin {
-  max-width: 330px;
-  margin: 100px auto;
-  background: #fff;
+  max-width: 300px;
+  margin: 142px auto;
+  background: $theme-bg-color;
   border-radius: 5px;
   .form-signin-heading {
     margin: 0;
-    padding: 25px 15px;
+    padding: 42px 15px 10px;
     text-align: center;
     color: #fff;
     position: relative;
+    img {
+      width: 175px;
+    }
+  }
+  ::-webkit-input-placeholder {
+    color: #fff;
   }
 }
 
@@ -54,7 +60,7 @@
     font-weight: normal;
     color: #fff;
     font-weight: normal;
-    font-family: 'Open Sans', sans-serif;
+    // font-family: 'Open Sans', sans-serif;
     position: absolute;
     bottom: -50px;
     width: 100%;
@@ -73,6 +79,7 @@
     font-size: 16px;
     height: auto;
     padding: 10px;
+    border-radius: none !important;
     box-sizing: border-box;
     transition: transform .4s;
 
@@ -90,30 +97,41 @@
   }
   input[type="text"], input[type="password"] {
     margin-bottom: 15px;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border: 1px solid #eaeaec;
-    background: #eaeaec;
+    border: 1px solid $login-color;
+    // background: $login-color;
     box-shadow: none;
     font-size: 12px;
+    border-radius: 0;
+    // color: rgba(255, 255, 255, 0.68);
   }
   .btn-login {
-    background: #6bc5a4;
-    color: #fff;
+    background: transparent;
+    color: $login-color;
     text-transform: uppercase;
     font-weight: normal;
-    font-family: 'Open Sans', sans-serif;
-    margin: 20px 0 5px;
-    padding: 5px;
+    // font-family: 'Open Sans', sans-serif;
+    margin: 30px auto 5px;
+    width: 160px;
+    padding: 3px;
     transition: all 0.3s;
-    font-size: 30px;
+    font-size: 19px;
+    line-height: 28px;
+    border: 2px solid $login-color;
 
     &:hover {
-      background: #688ac2;
+      background: $login-color;
+      color: #fff;
       transition: all 0.3s;
     }
+    &:active {
+      color: #fff;
+      background: lighten($login-color, 6);
+      border: 2px solid lighten($login-color, 6);
+    }
     &[disabled] {
-      background: #6bc5a4;
+      color: #fff;
+      background: lighten($login-color, 20);
+      border: 2px solid lighten($login-color, 20);
       cursor: default;
     }
   }
@@ -124,7 +142,7 @@
     font-weight: normal;
   }
   a, a:hover {
-    color: #6bc5a4;
+    color: $theme-font-color;
   }
   a:hover {
     text-decoration: underline;
@@ -132,7 +150,7 @@
 }
 
 .login-wrap {
-  padding: 20px;
+  padding: 20px 27px;
   position: relative;
 }
 
