--- a/public/src/sass/nav.sass
+++ b/public/src/sass/nav.sass
@@ -105,7 +105,7 @@
   .left-side
     width: $nav-collapsed-w
     overflow: visible !important
-    background: $theme-dark-color
+    background: darken($theme-dark-color, 8)
     border: none
     .logo
       display: none
