1. set acl : true 开启权限控制 2. fix version

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,9 +10,14 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link href="/plugins/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/css/style.min.css?rev=396b1e48e75fa72f21b2acef1d4a6c7f">
+  <link rel="stylesheet" href="/css/style.min.css?rev=ce1e915f8e1b5571a7e3e39f1f88de8d">
   <script type="text/javascript">
-    window.xfxb = { login: {{isLogin}}, root: "/"{{#if user}}, user : JSON.parse('{{{user}}}') || {} {{/if}} };
+    window.xfxb = {
+      login: {{isLogin}},
+      root: "/",
+      version: "{{version}}"
+      {{#if user}}, user : JSON.parse('{{{user}}}') || {} {{/if}}
+    };
   </script>
 </head>
 
@@ -27,7 +32,7 @@
   </div>
   <section id="app"></section>
   <script src="/lib/vendor/jquery-1.11.3.min.js"></script>
-  <script src="/js/app.min.js?rev=24bbbfc7820a19d7a0784dc2ed7997e7"></script>
+  <script src="/js/app.min.js?rev=b59e9d64e43e330695fbde6e35bbd7e2"></script>
   <script type="text/javascript">$(function(){$('#loader').remove();})</script>
   
   <!-- <script src="/js/main.min.js?rev=74a2b33f68a000e4799f522640dc3654"></script> -->
