1.完善打印； 2.修复若干金额单位错误；

--- a/public/src/sass/_variables.sass
+++ b/public/src/sass/_variables.sass
@@ -15,8 +15,10 @@ $nav-collapsed-w: 52px
 $sub-menu-min-w: 140px
 
 $theme-black: #4A4947
+$theme-colour-bg: #dac7a7 //文字着重背景色
 
 $pagination-color: #D0C59E
 $btn-color: #BD9E64
 
-$login-color: #C38D6D
+// $login-color: #C38D6D
+$login-color: #D27F2E
