--- a/public/src/sass/base.sass
+++ b/public/src/sass/base.sass
@@ -70,6 +70,8 @@ a
   padding-left: 20px
 .round
   @include border-radius(5px)
+.round-2
+  @include border-radius(2px)
 .bordered
   display: inline-block
   border: 1px solid $theme-color
@@ -102,6 +104,8 @@ a
   font-weight: bold
 .theme
   color: $theme-font-color
+.theme-font-bg
+  background-color: $theme-colour-bg
 
 /**************************/
 /********* 组件类 **********/
