--- a/views/print.hbs
+++ b/views/print.hbs
@@ -242,7 +242,7 @@
                         <span style="margin:2px;">&nbsp;5.就敢送：迟到30分钟免费赠送！</span>
                     </td>
                     <td style="border-left:none;">
-                        <img src="{{../baseHref}}/src/images/qrcode.jpg" style="width: 89px; height: 89px;">
+                        <img src="{{../baseHref}}/src/images/qrcode.png" style="width: 89px; height: 89px;vertical-align: middle;">
                     </td>
                 </tr>
                 <tr>
@@ -282,7 +282,7 @@
                 </ul>
             </div>
             <div style="float: right;width: 96px;height: 369px;position: relative;">
-                <div style="position:absolute; top: 43%;left: -110px;transform: rotate(90deg)">
+                <div style="position:absolute; top: 43%;left: -120px;transform: rotate(90deg)">
                     <image id="barcode{{@index}}" />
                 </div>
             </div>
